tdf#161521 fix page margins on first page with mirrord layout

Documents starting with an even page on a mirrored layout need
to switch left/right margin on the first page.
Applies also to docx export.
JUnit test included

Change-Id: Ia363941c6a7a25f9208acc7e40b77baa88080780
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/168658
Tested-by: Jenkins
Tested-by: Gabor Kelemen <gabor.kelemen.extern@allotropia.de>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/180427
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>
Reviewed-by: Justin Luth <jluth@mail.com>